a few updates to attempt a fix on small screens

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -16,10 +16,8 @@
   font-size: 3.5rem;
   line-height: 3.5rem;
   text-transform: uppercase;
-  float: left;
   width: 71.5%;
   margin-top: 2rem;
-  letter-spacing: 0.9rem;
   
   a {
     color: inherit;
@@ -42,5 +40,4 @@
 
 .byline {
   text-align: right;
-  margin-right: 2.5rem;
 }
